# dm-graphql-api

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md
src/: lib.rs  main.rs  schema.rs
