[package]
name = "dm-graphql-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# GraphQL dependencies
async-graphql = "7.0"
async-graphql-axum = "7.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "json"] }
# Configuration
config = "0.14"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.13"
# Linting and formatting
clippy = "0.1"
# Integration testing
tower-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"
